reference-llvm/tests/should-fail/fail15.mu
// function guess mismatch with decl

function @entry foo() {
    bar(8, 9, 10);
}

function bar(x, y, z, w) {
    ;
}
